remove config backup/restore
